<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/my_nanodegree_apps"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/heading_background"/>

    <LinearLayout
        android:layout_width="@dimen/button_layout_dimen"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/btn_spotify"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:onClick="OnClick"
            style="@style/button_background"/>

        <Button
            android:id="@+id/btn_scores"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores_apps"
            android:onClick="OnClick"
            style="@style/button_background"/>

        <Button
            android:id="@+id/btn_library"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:onClick="OnClick"
            style="@style/button_background"/>

        <Button
            android:id="@+id/btn_build_bigger"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            android:onClick="OnClick"
            style="@style/button_background"/>

        <Button
            android:id="@+id/btn_xyz_reader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            android:onClick="OnClick"
            style="@style/button_background"/>

        <Button
            android:id="@+id/btn_capstone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:onClick="OnClick"
            style="@style/myapp_button_background"/>
    </LinearLayout>

</RelativeLayout>
